--- a/.env.local.example
+++ b/.env.local.example
@@ -10,7 +10,7 @@ NEXT_PUBLIC_URL="http://localhost:3000"
 # Nylas (OAuth & API)
 NYLAS_CLIENT_ID="your-nylas-client-id"
 NYLAS_API_SECRET_KEY="your-nylas-api-secret-key"
-NYLAS_API_URL="https://api.nylas.com"
+NYLAS_API_URL="https://api.us.nylas.com"
 
 # Node environment
 NODE_ENV=development
