--- a/.env.local.example
+++ b/.env.local.example
@@ -11,7 +11,7 @@ NEXT_PUBLIC_URL="http://localhost:3000"
 NYLAS_CLIENT_ID="your-nylas-client-id"
 NYLAS_API_SECRET_KEY="your-nylas-api-secret-key"
 NYLAS_API_URL="https://api.us.nylas.com"
-
+UPLOADTHING_TOKEN="your-uploadthing-token"
 # Node environment
 NODE_ENV=development
 
