--- a/.env.local.example
+++ b/.env.local.example
@@ -12,6 +12,10 @@ NYLAS_CLIENT_ID="your-nylas-client-id"
 NYLAS_API_SECRET_KEY="your-nylas-api-secret-key"
 NYLAS_API_URL="https://api.us.nylas.com"
 UPLOADTHING_TOKEN="your-uploadthing-token"
+
+# Vercel Blob (for file uploads)
+BLOB_READ_WRITE_TOKEN="your-vercel-blob-token"
+
 # Node environment
 NODE_ENV=development
 
