--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cloud",
+  "name": "best-mate",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -16,6 +16,7 @@
     "@internationalized/date": "^3.5.5",
     "@nylas/react": "^1.1.3",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -24,8 +25,10 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@uploadthing/react": "^7.0.1",
+    "@vercel/blob": "^2.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
@@ -41,6 +44,7 @@
     "react-aria-components": "^1.3.3",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
+    "react-dropzone": "^14.3.8",
     "react-stately": "^3.32.2",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
